--- a/MasterNotesDocument.Rmd
+++ b/MasterNotesDocument.Rmd
@@ -3196,6 +3196,7 @@ file.exists(filename) #verifies that the file was copied
 * The **readxl** package provides functions to read Excel formatted files.
 * The **excel_sheets()** function gives the names of the sheets in the Excel file. These names are passed to the sheet argument for the readxl functions *read_excel()**, **read_xls()**, and **read_xlsx()**.
 * The **read_lines()** function shows the first few lines of a file in R.
+* If there is no header, when using a read function, add argument **col_names = FALSE**
 
 Example using the packages:
 ```{r}
@@ -3222,8 +3223,249 @@ head(dat)
 #head(dat2)
 ```
 
+#### Importing Data using R-base Functions
+
+* R-base import functions (**read.csv()**, **read.table()**, **read.delim()**) generate data frames rather than tibbles.
+
+#### Downloading Files From the Internet
+
+* The **read_csv()** function and other import functions can read a url directly.
+* If you want to have a local copy of the file, you can use **download.file()**
+* **tempdir()** creates a directory with a name that is very unlikely not to be unique.
+* **tempfile()** creates a character string that is likely to be unique.
+
+How to download (not executed because it's just an example)
+```
+url = "https://raw.githubusercontent.com/rafalab/dslabs/master/inst/extdata/murders.csv"
+dat = read_csv(url)
+#download.file(url, "murders.csv")
+tempfile()
+tmp_filename = tempfile()
+#download.file(url, tmp_filename)
+#dat = read.csv(tmp_filename)
+#file.remove(tmp_filename)
+```
+
 ### Section 2: Tidy Data
 
+#### 2.1: Reshaping Data
+
+##### Tidy Data
+
+* In tidy data, each row represents an observation and each column represents a different variable.
+* In wide data, each row includes several observations and one of the variables is stored in the header.
+
+Example of tidy data vs. wide data:
+```{r}
+data(gapminder)
+
+#create and inspect a tidy data frame
+tidy_data = gapminder %>%
+  filter(country %in% c("South Korea","Germany")) %>%
+  select(country, year, fertility)
+head(tidy_data)
+
+#plotting tidy data is simple
+tidy_data %>%
+  ggplot(aes(year, fertility, color=country)) +
+  geom_point()
+
+#import and inspect example of original Gapminder data in wide format
+path = system.file("extdata", package = "dslabs")
+filename = file.path(path, "fertility-two-countries-example.csv")
+wide_data = read_csv(filename)
+select(wide_data,country,'1960':'1967')
+```
+
+##### Reshaping Data
+
+* The **tidyr** package includes several functions that are useful for tidying data.
+* The **gather()** function converts wide data into tidy data.
+* The **spread()** function converts tidy data into wide data.
+
+![Gather and Spread Info](C:\Users\conno\OneDrive\Documents\Data Science Certificate\HarvardxDataScienceCertificate\Course 6\images\gatherandspread.png)
+
+Converting data from wide to tidy and vice-versa:
+```{r}
+#original wide data
+path = system.file("extdata", package="dslabs")
+filename = file.path(path, "fertility-two-countries-example.csv")
+wide_data = read_csv(filename)
+
+#tidy data from dslabs
+data("gapminder")
+tidy_data = gapminder %>%
+  filter(country %in% c("South Korea","Germany")) %>%
+  select(country, year, fertility)
+head(tidy_data)
+
+#gather wide data to make new tidy data
+new_tidy_data = wide_data %>%
+  gather(year, fertility, '1960':'2015')
+head(new_tidy_data)
+
+#gather all columns except country
+new_tidy_data = wide_data %>%
+  gather(year, fertility, -country)
+head(new_tidy_data)
+
+#gather treats column names as characters by default
+class(tidy_data$year)
+class(new_tidy_data$year)
+
+#convert gathered column names to numeric
+new_tidy_data = wide_data %>%
+  gather(year, fertility, -country, convert = T)
+class(new_tidy_data$year)
+
+#spread tidy data to generate wide data
+new_wide_data = new_tidy_data  %>% spread(year, fertility)
+select(new_wide_data, country, '1960':'1967')
+```
+
+##### Separate and Unite
+
+* The **separate()** function splits one column into two or more columns at a specified character that separates the variables.
+* When there is an extra separaton in some of the entries, use **fill="right"** to pad missing values with NAs, or use **extra="merge"** to keep extra elements together.
+* The **unite()** function combines two columns and adds a separating character.
+
+Using separate and unite to tidy data:
+```{r}
+#import data
+path = system.file("extdata", package ="dslabs")
+filename = file.path(path, "life-expectancy-and-fertility-two-countries-example.csv")
+raw_dat = read_csv(filename)
+select(raw_dat,1:5)
+
+#gather all columns except country
+dat = raw_dat %>%gather(key, value, -country)
+head(dat)
+dat$key[1:5]
+
+#separate on underscores
+dat %>% separate(key, c("year","variable_name"),"_")
+dat %>% separate(key, c("year","variable_name"))
+
+#split on all underscores, pad empty cells with NA
+dat %>% separate(key, c("year","first_variable_name","second_variable_name"),fill = "right")
+
+#split on first underscore but keep life_expectancy merged
+dat %>% separate(key, c("year","variable_name"),sep = "_",extra = "merge")
+
+#separate then spread
+dat %>% separate(key, c("year","variable_name"), sep = "_", extra = "merge") %>%
+  spread(variable_name, value)
+
+#separate then unite
+dat %>% separate(key, c("year", "first_variable_name","second_variable_name"), fill = "right") %>%
+  unite(variable_name, first_variable_name, second_variable_name, sep = "_")
+
+#full code for tidying data
+dat %>%
+  separate(key, c("year", "first_variable_name", "second_variable_name"), fill = "right") %>%
+  unite(variable_name, first_variable_name, second_variable_name, sep = "_") %>%
+  spread(variable_name, value) %>%
+  rename(fertility = fertility_NA)
+```
+
+#### 2.2: Combining Tables
+
+* The **join()** function in the dplyr package combines two tables such that matching rows are together
+* **left_join()** only keeps rows that have information in the first table
+* **right_join()** only keeps rows that have information in the second table
+* **inner_join()** only keeps rows that have information in both tables
+* **full_join()** keeps all rows from both tables
+* **semi_join()** keeps the part of the first table for which we have information in the second
+* **anti_join()** keeps the elements of the first table for which there is no information in the second
+
+Using the different join functions:
+```{r}
+#import US election results data
+data(polls_us_election_2016)
+head(results_us_election_2016)
+identical(polls_us_election_2016, results_us_election_2016)
+
+#join the murders table and us election results table
+tab = left_join(murders, results_us_election_2016, by="state")
+head(tab)
+
+#plot electoral votes versus population
+tab %>% ggplot(aes(population/10^6, electoral_votes,label=abb)) +
+  geom_point() +
+  geom_text_repel() +
+  scale_x_continuous(trans = "log2") +
+  scale_y_continuous(trans = "log2") +
+  geom_smooth(method = "lm", se = F)
+  
+#make two smaller tables to demonstrate joins
+tab1 = slice(murders, 1:6) %>% select(state, population)
+tab1
+tab2 = results_us_election_2016 %>% filter(state %in% c("Alabama","Alaska","Arizona","California","Connecticut","Delaware"))%>% arrange(by=state) %>% select(state, electoral_votes)
+tab2
+
+#experiment with different joins
+left_join(tab1, tab2)
+tab1 %>% left_join(tab2)
+tab1 %>% right_join(tab2)
+inner_join(tab1,tab2)
+semi_join(tab1,tab2)
+anti_join(tab1,tab2)
+full_join(tab1,tab2)
+```
+
+##### Binding
+
+* Unlike the join functions, the binding functions do not try to match by a variable, but rather just combine data sets
+* **bind_cols()** binds two objects by making them columns in a tibble. The R-base functions **cbind()** binds columns but makes a data frame or matrix instead.
+* **bind_rows()** is similar but binds rows instead of columns. The R-base function **rbind()** binds rows into a data frame or matrix.
+
+Binding example:
+```{r}
+bind_cols(a = 1:3, b = 4:6)
+
+tab1 = tab[,1:3]
+tab2 = tab[,4:6]
+tab3 = tab[,7:9]
+new_tab = bind_cols(tab1,tab2,tab3)
+head(new_tab)
+
+tab1 = tab[1:2,]
+tab2 = tab[3:4,]
+bind_rows(tab1,tab2)
+```
+
+##### Set Operators
+
+* By default, the set operators in R-base work on vectors. If tidyverse/dplyr are loaded, they also work on data frames
+* You can take intersections of vectors using **intersect()**. This returns the elements common to both sets.
+* You can take the union of vectors using **union()**. This returns the elements that are in either set.
+* The set difference between a first and second argument can be obtained with **setdiff()**. Not that this function is not symmetric.
+* The function **set_equal()** tells us if two sets are the same, regardless of the order of elements.
+
+Example of the Set Operators:
+```{r}
+#intersect of data frames
+intersect(1:10,6:15)
+intersect(c("a","b","c"),c("b","c","d"))
+tab1 = tab[1:5,]
+tab2 = tab[3:7,]
+intersect(tab1,tab2)
+
+#perform a union of vectors or data frames
+union(1:10,6:15)
+union(c("a","b","c"),c("b","c","d"))
+union(tab1,tab2)
+
+#set difference of vectors or data frames
+setdiff(1:10,6:15)
+setdiff(c("a","b","c"),c("b","c","d"))
+setdiff(tab1,tab2)
+
+#setequal determines whether sets have the same elements regardless of order
+setequal(1:5,1:6)
+setequal(1:5,5:1)
+setequal(tab1,tab2)
+```
 
 ### Section 3: String Processing
 
