--- a/MasterNotesDocument.Rmd
+++ b/MasterNotesDocument.Rmd
@@ -8,7 +8,7 @@ output:
 
 ---
 ```{r, echo = F, eval = F}
-install.packages("tidyverse", "dslabs", "NHANES","ggthemes", "ggrepel","gridExtra", "dplyr","RColorBrewer", "readxl")
+install.packages("tidyverse", "dslabs", "NHANES","ggthemes", "ggrepel","gridExtra", "dplyr","RColorBrewer","readxl","rvest","htmlwidgets")
 library(tidyverse)
 library(dslabs)
 library(NHANES)
@@ -19,6 +19,8 @@ library(dplyr)
 library(RColorBrewer)
 library(gtools)
 library(readxl)
+library(rvest)
+library(htmlwidgets)
 ```
 
 
@@ -3467,7 +3469,283 @@ setequal(1:5,5:1)
 setequal(tab1,tab2)
 ```
 
+#### 2.3 Web Scraping
+
+* Web scraping is extracting data from a website
+* The **rvest** harvesting package includes functions to extract nodes of an HTML document: **html_nodes()** extracts all nodes of different types, and **html_node()** extracts the first node.
+* **html_table()** converts an HTML table to a data frame.
+
+Building the murders data set from the wiki page:
+```{r}
+library(readr)
+library(readxl)
+library(rvest)
+url = "https://en.wikipedia.org/wiki/Murder_in_the_United_States_by_state"
+h = read_html(url)
+class(h)
+h
+
+tab = h %>% html_nodes("table")
+tab = tab[[2]]
+
+tab = tab %>% html_table()
+class(tab)
+
+tab = tab %>% setNames(c("state","population","total","murders","gun_murders","gun_ownership","total_rate","murder_rate","gun_murder_rate"))
+head(tab)
+```
+
+* Most pages of a website use the same CSS file to build their sheets. Therefore, we can use this to our advantage to make it easier to extract information and data from these websites. 
+* CSS leverages patterns to define elements such as font, color, size, and distance, also known as selectors. An example of a pattern is **table**.
+* Knowing which selector to use is difficult. There is a program called SelectorGadget that can be used to determine which CSS selector you need to extract specific components of a webpage. There is a Chrome extension for this software.
+
+As an example, here is extracting a Food Network recipe:
+```{r}
+#For the guac recipe, the selectors have already been determined
+h = read_html("http://www.foodnetwork.com/recipes/alton-brown/guacamole-recipe-1940609")
+recipe = h %>% html_node(".o-AssetTitle__a-HeadlineText") %>% html_text()
+prep_time = h %>% html_node(".m-RecipeInfo__a-Description--Total") %>% html_text()
+ingredients = h %>% html_nodes(".o-Ingredients__a-Ingredient") %>% html_text()
+
+#You can see how complex the selectors are
+guacamole = list(recipe,prep_time,ingredients)
+guacamole
+
+#Since recipes from this website follow this general layout, we can write a function that extracts the information
+get_recipe = function(url){
+  h = read_html(url)
+  recipe = h %>% html_node(".o-AssetTitle__a-HeadlineText") %>% html_text()
+  prep_time = h %>% html_node(".m-RecipeInfo__a-Description--Total") %>% html_text()
+  ingredients = h %>% html_nodes(".o-Ingredients__a-Ingredient") %>% html_text()
+  return(list(recipe = recipe, prep_time = prep_time,ingredients = ingredients))
+  
+}
+
+#Testing function
+get_recipe("http://www.foodnetwork.com/recipes/food-network-kitchen/pancakes-recipe-1913844")
+```
+
 ### Section 3: String Processing
+
+#### String Processing Part 1
+
+##### String Parsing
+
+* The most common tasks in string parsing include:
++ extracting numbers from strings
++ removing unwanted characters from text
++ finding and replacing characters
++ extracting specific parts of strings
++ converting free form text to more uniform formats
++ splitting strings into multiple values
+* The **stringr** package contains string processing function that follow a similar naming format and are compatible with the pipe.
+
+Example of how data from websites may be in the wrong format (see commas in the population and total columns):
+```{r}
+url = "https://en.wikipedia.org/w/index.php?title=Gun_violence_in_the_United_States_by_state&direction=prev&oldid=810166167"
+murders_raw = read_html(url) %>%
+  html_nodes("table") %>%
+  html_table() %>%
+  .[[1]] %>%
+  setNames(c("state","population","total","murder_rate"))
+
+head(murders_raw)
+class(murders_raw$population)
+class(murders_raw$total)
+```
+
+##### Defining Strings/Escaping
+
+* Define a string by surrounding text with either single or double quotes
+* To include a single quote inside a string, use double quotes on the outside. To include a double quote inside a string, use single quotes on the outside.
+* The **cat()** function displays a sting as it is represented inside R.
+* To include a double quote inside of a string surrounded by double quotes, use the backslash to escape the double quote. Escaping a single qiote to include it inside of a string defined by single quotes.
+* We will see additional uses of escape later.
+
+Defining Strings Example:
+```{r}
+s = "Hello!" #double quotes defining a string
+s = 'Hello!' #single quotes defining a string
+
+s = '"Hello!' #double quote in single quot
+cat(s)
+
+s = "5'"
+cat(s)
+
+#To include both double and single quotes in a string, escape with \
+s = '5\'10"'
+cat(s)
+s = "5'10\""
+cat(s)
+```
+
+##### stringr Package
+
+* The main types of string processing takes are detecting, locating, extracting, and replacing elements of a strings.
+* The **stringr** package from the tidyverse includes a variety of string processing functions that begin with **str_** and tkae the string as the first argument, which makes the compatible with the pipe.
+* Use the **str_detect()** function to determine whether a string contains a certain pattern.
+* Use the **str_replace_all()** function to replace all instances of one pattern with another pattern. To remove a pattern, replace with empty string ("").
+* The **parse_number()** function removes punctuation from strings and converts them to numeric.
+* **mutate_at()** performs the same transformation on the specified column numbers.
+
+Using these function to fix the murders dataset
+```{r}
+#detect whether there are any commas
+commas = function(x) any(str_detect(x,","))
+murders_raw %>% summarize_all(funs(commas))
+
+#replace commas with the empty string and convert to numeric
+test_1 = str_replace_all(murders_raw$population,",","")
+test1 = as.numeric(test_1)
+head(test_1)
+class(test1)
+
+#parse_number also removes commas and converts to numeric
+test_2 = parse_number(murders_raw$population)
+head(test_2)
+class(test_2)
+
+murders_new = murders_raw %>% mutate_at(2:3,parse_number)
+murders_new %>% head()
+```
+
+#### String Processing Part 2
+
+##### Case Study: Reported Heights
+
+* In the raw heights data, many students did not report their height as the number of inches as requested. There are many entries with real height information but in the wrong format, which we can extract with string processing.
+* When there are both text and numeric entries in a column, the column will be a character vector.
+* To correct problematic entries, look for patterns that are shared across large numbers of entries, the define rules that identify those patterns and use these rules to write string processing tasks.
+* Use **supressWarnings()** to hide warning messages for a function.
+
+Case Study: Reported Heights code:
+```{r}
+#load raw heights data and inspect
+data(reported_heights)
+class(reported_heights$height)
+
+#convert to numeric, inspect, count NAs
+x = as.numeric(reported_heights$height)
+head(x)
+sum(is.na(x))
+
+#keep only entries that result in NAs
+reported_heights %>% mutate(new_height = as.numeric(height)) %>%
+  filter(is.na(new_height)) %>%
+  head(n=10)
+
+#calculate cutoffs that calculate 99.99% of the human population
+alpha = 1/10^6
+qnorm(1-alpha/2,69.1,2.9)
+qnorm(alpha/2,63.7,2.7)
+
+#keep only entries that either results in NAs or are outside plausible range of heights
+not_inches <- function(x, smallest = 50, tallest = 84){
+  inches <- suppressWarnings(as.numeric(x))
+  ind <- is.na(inches) | inches < smallest | inches > tallest
+  ind
+}
+
+#number of problematic entries
+problems = reported_heights %>%
+  filter(not_inches(height)) %>%
+  .$height
+length(problems)
+
+#10 examples of x'y or x'y" or x'y\"
+pattern = "^\\d\\s*'\\s*\\d{1,2}\\.*\\d*'*\"*$"
+str_subset(problems,pattern) %>% head(n=10) %>%cat
+
+#10 examples of entries in cm rather than inches
+ind <- which(between(suppressWarnings(as.numeric(problems))/2.54, 54, 81) )
+ind <- ind[!is.na(ind)]
+problems[ind] %>% head(n=10) %>% cat
+```
+
+##### Regular Expressions (Regex)
+
+* A regular expression (regex) is a way to describe a specific patterns of characters of text. A set of rules has been designed to do this specifically and efficiently.
+* **stringr** functions can take a regex as a pattern.
+* **str_detect()** indicates whether a pattern is present in a string.
+* The main difference between a regex and a regular string is that a regex can include special characters.
+* The | symbol inside a regex means "or"
+* use **\\d** to represent digits. The backslash is used to distinguish it from the character 'd'. In R, you must use two backslashes for digits in regular expressions; in some other languages, you will only use on backslash for regex special characters.
+* **str_view()** highlights the first occurrence of a patterns, the the **str_view_all()** function highlights all occurrences of the patterns.
+
+Regex Examples:
+```{r}
+#detect whether a comma is present
+pattern = ","
+str_detect(murders_raw$total,pattern)
+
+#show the subset of strings including "cm"
+str_subset(reported_heights$height, "cm")
+
+#use the "or" symbol inside a regex (|)
+yes = c("180 cm", "70 inches")
+no = c("180","70''")
+s = c(yes,no)
+str_detect(s,"cm") | str_detect(s,"inches")
+str_detect(s,"cm|inches")
+
+#using \\d for digits
+yes = c("5","6","5'10","5 feet", "4'11")
+no = c("",".","Five","six")
+s = c(yes,no)
+pattern = "\\d"
+str_detect(s,pattern)
+
+#highlight occurrence of pattern
+str_view(s,pattern)
+
+#highlight all instances of pattern
+str_view_all(s, pattern)
+```
+
+##### Character Classes, Anchors, and Quantifiers
+
+* Define strings to test your regular expressions, including some elements that match and some that do not. This allows you to check for the two types of errors: failing to match, and matching incorrectly.
+* Square brackets define character classes: groups of characters that count as a matching the pattern. You can use ranges to define character classes, such as [0-9] for digits and [a-zA-Z] for all letters.
+* Anchors define patterns that must start or end at specific places. ^ and $ represent the beginning and end of the string respectively.
+* Curly braces are quantifiers that state how many times a certain character can be repeated in the pattern. \\d{1,2} matches exactly 1 or 2 consecutive digits.
+
+```{r}
+#using \\d for digits
+yes = c("5","6","5'10","5 feet", "4'11")
+no = c("",".","Five","six")
+s = c(yes,no)
+pattern = "\\d"
+
+#[56] means 5 or 6
+str_view(s,"[56]")
+
+#[4-7] means 4, 5, 6, or 7
+yes = as.character(4:7)
+no = as.character(1:3)
+s = c(yes,no)
+str_detect(s,"[4-7]")
+
+#^ means start of a string, $ means end of string
+pattern = "^\\d$"
+yes = c("1","5","9")
+no = c("12","123","1","a4","b")
+s = c(yes,no)
+str_view(s,pattern)
+
+#curly braces define quantifiers: 1 or 2 digits
+pattern = "^\\d{1,2}$"
+yes = c("1","5","9","12")
+no = c("123","a4","b")
+str_view(c(yes,no),pattern)
+
+#combining character class, anchors and quantifier
+pattern = "^[4-5]'\\d{1,2}\"$"
+yes <- c("5'7\"", "6'2\"",  "5'12\"")
+no <- c("6,2\"", "6.2\"","I am 5'11\"", "3'2\"", "64")
+str_detect(yes, pattern)
+str_detect(no, pattern)
+```
 
 
 ### Section 4: Dates, Times and Text Mining
